--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="lib/accounts-base-client-side/dist/accounts-base-client-side.bundle.min.js"></script>
     <script src="lib/accounts-phone/dist/accounts-phone.bundle.min.js"></script>
     <script src="lib/angular-meteor/dist/angular-meteor.bundle.js"></script>
+    <script src="lib/ngletteravatar/ngletteravatar.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -29,13 +30,21 @@
     <script src="js/auth.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
+
     <script src="js/directives/input.directive.js"></script>
+
     <script src="js/controllers/login.controller.js"></script>
     <script src="js/controllers/confirmation.controller.js"></script>
     <script src="js/controllers/profile.controller.js"></script>
+
     <script src="js/filters/calendar.filter.js"></script>
+    <script src="js/filters/chat-name.filter.js"></script>
+    <script src="js/filters/chat-picture.filter.js"></script>
+
     <script src="js/controllers/chats.controller.js"></script>
+    <script src="js/controllers/new-chat.controller.js"></script>
     <script src="js/controllers/chat-detail.controller.js"></script>
+
     <script src="js/controllers/settings.controller.js"></script>
   </head>
   <body ng-app="whatsapp">
